# reddit-analysis

./: .gitignore  README.md  backup_db.sh  comments_table_populate.py  config.py  db_client.py  db_handler.py  docker-compose.yml  export_db.py  get_comments_praw.py  get_posts_praw.py  main.py  make_cron_job.sh  populate_comments_table.py  populate_posts_table.py  populate_subreddits_table.py  posts_table_populate.py  pyproject.toml  schema.sql  status.sh  subreddits_table_populate.py
data_collection_scripts/: make_cron_job.sh  posts_table_populate.py  subreddits_table_populate.py
sql/: schema.sql
src/: comment_cleaner.py  config.py  main.py  sentiment_analyzer.py
src/clients/: __init__.py  praw_client.py
src/data_collection_scripts/: comments_table_populate.py  status.sh  test.py
src/sql/: -- adj comment count.sql  -- comment info.sql  -- posts info.sql  schema.sql
