[project]
name = "reddit-analysis"
version = "0.1.0"
description = "Sentiment analysis of data-related subreddits"
authors = [
    {name = "eddie-m-m",email = "eddie.m.menefee@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "praw (>=7.8.1,<8.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
