[project]
name = "reddit-analysis"
version = "0.1.0"
description = "Sentiment analysis of data-related subreddits"
authors = [
    {name = "eddie-m-m",email = "eddie.m.menefee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "pandas>=2.3.2",
    "praw>=7.8.1",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]
